--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     the nose when an infected person coughs or sneezes, so it’s important that you also practice
                     respiratory etiquette (for example, by coughing into a flexed elbow).</p>
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12">
+            <div class="col-lg-6">
                 <iframe width="650" height="410" src="https://www.youtube.com/embed/sHP0UIdZyI4" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
